--- a/assignment4ToUpload/index.html
+++ b/assignment4ToUpload/index.html
@@ -12,7 +12,7 @@
     <loading-spinner></loading-spinner>
 
     <!-- Libraries -->
-    <script src="/lib/jquery-3.2.1.min.js"></script>
+    <script src="lib/jquery-3.2.1.min.js"></script>
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-ui-router.min.js"></script>
 
